# JFrogMLExamples

./: .gitignore  README.md  manifest.json
bert_conda/: README.md  pyproject.toml  test_live_model.py  test_model_locally.py
bert_conda/main/: conda.yml  model.py
book_recommender/: .frogmlignore  README.md  local-training-and-model-registry.ipynb  remote-training-and-deployment.md  test_live_endpoint.py  test_model_code_locally.py
book_recommender/main/: __init__.py  books_dataset.csv  conda.yml  data_processor.py  model.py  requirements.txt
book_recommender/serving_code/: __init__.py  book_recommender_pipeline.py  predict.py
catboost_poetry/: README.md  test_live_model.py  test_model_locally.py
catboost_poetry/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_poetry/main/: conda.yml  model.py  pyproject.toml
churn_model_new/: README.md  test_model_locally.py
churn_model_new/main/: conda.yml
codegen_conda/: README.md  test_live_model.py  test_model_locally.py
codegen_conda/main/: model.py
distilgpt2_conda/: README.md  test_live_model.py  test_model_locally.py
distilgpt2_conda/main/: model.py
environment_example/: README.md
feature_store_quickstart_guide/main/: requirements.txt
finetuned_devops_helper/: README.md  devops-helper-training.md  llm_finetuning_devops.ipynb  remote-training-and-deployment.md  test_live_endpoint.py  test_model_code_locally.py
finetuned_financial_qa/: README.md  local_finetuning_financial_qa.ipynb  remote-training-and-deployment.md  test_batch_endpoint.py  test_live_model.py  test_model_code_locally.py
finetuned_financial_qa/main/: dataset_loader.py  model.py  pyproject.toml
flan_t5_finetuned_poetry/: README.md  test_live_model.py  test_model_locally.py
flan_t5_finetuned_poetry/main/: model.py  pyproject.toml
flan_t5_poetry/: README.md  test_live_model.py
flan_t5_poetry/main/: model.py
fraud_detection/: call_predict_http.sh  credit-card-fraud-detection.ipynb  test_live_endpoint.py
fraud_detection/main/: requirements.txt
frogMLExample/: FrogML Demo.ipynb  FrogMLDemo.ipynb  FrogMLVisualDemo.ipynb  README.md
frogMLExample/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
frogMLExample/main/: Untitled.ipynb  __init__.py  conda.yml  model.py  population.csv  test_model.py  training_data.csv
gpt_neo_conda/: README.md  test_live_model.py  test_model_locally.py
gpt_neo_conda/main/: model.py
jfrog-hf-docker-demo/: Dockerfile  README.md
llama2/: README.md  g5RU^u4#lZ@9El@
poetry-llm/: pyproject.toml
sagemaker/: README.md  pipeline.ipynb  pyproject.toml
sagemaker/deployment/: config.py  inference.py  requirements.txt
sagemaker/training/: config.py  dataset_utils.py  hyperparameters.json  requirements.txt  train.py
sentence-transformer/: env.txt
sentiment_analysis/: README.md
sentiment_analysis/main/: finetuning.py  model.py  pyproject.toml
streamlit_rag_demo/: app.py  g5RU^u4#lZ@9El@  pyproject.toml  qwak_llm.py
titanic_conda/: README.md  test_live_model.py  test_model_locally.py
wine-type-training/: Prediction_of_Wine_type_using_Deep_Learning.ipynb  README.md
xgboost_conda/: local_testing.py
(+82 files in other folders)
