[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devops-assistant"
version = "0.1.0"
description = "DevOps Assistant SageMaker inference package"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["deployment*"]
