[tool.poetry]
name = "Finetuning FLAN-T5 Model"
version = "0.1.0"
description = "Finetuning a FLAN-T5 on custom data using JFrogML"
authors = ["JFrogML Team <info@jfrog.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "1.5.3"
transformers = "*"
accelerate = "*"
xformers = "*"
sentencepiece = "*"
